k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: sre-demo
spec:
  stripPrefix:
    prefixes:
      - /api
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prometheus
  namespace: sre-demo
spec:
  stripPrefix:
    prefixes:
      - /prometheus
