k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-ingress
  namespace: sre-demo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: order-api-service
                port:
                  number: 80

          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090

          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
